@@ -17,13 +17,15 @@
 <h1 class="centered"><a name="top">Interesting <code>configure</code>
 options</a></h1>
 
-<p>The latest version of this document is always available at
+<p class="fineprint"><em>
+   The latest version of this document is always available at
    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/configopts.html">
    http://gcc.gnu.org/onlinedocs/libstdc++/configopts.html</a>.
-</p>
+</em></p>
 
-<p>To the <a href="http://gcc.gnu.org/libstdc++/">libstdc++-v3 homepage</a>.
-</p>
+<p><em>
+   To the <a href="http://gcc.gnu.org/libstdc++/">libstdc++-v3 homepage</a>.
+</em></p>
 
 <!-- ####################################################### -->
 <hr />
@@ -152,12 +154,11 @@ options</a></h1>
         , are installed in <code>${libdir}/debug</code>, and have the
         same names and versioning information as the non-debug
         libraries. This option is off by default.
-        <p>
-        Note this make command, executed in
+     </p>
+     <p>Note this make command, executed in
         the build directory, will do much the same thing, without the
         configuration difference and without building everything twice: 
         <code>make CXXFLAGS='-g3 -O0' all</code>
-        </p>
      </p>
  </dd>
 
