@@ -49,6 +49,7 @@
 <ul>
    <li><a href="configopts.html">Configure options</a></li>
    <li><a href="install.html">Getting started: configure, build, install</a>
+   </li>
    <li><a href="debug.html">Debugging schemes and strategies</a>
    </li>
 </ul>
