@@ -17,13 +17,15 @@
 <h1 class="centered"><a name="top">Explanatory notes about libstdc++-v3
 design</a></h1>
 
-<p>The latest version of this document is always available at
+<p class="fineprint"><em>
+   The latest version of this document is always available at
    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/explanations.html">
    http://gcc.gnu.org/onlinedocs/libstdc++/explanations.html</a>.
-</p>
+</em></p>
 
-<p>To the <a href="http://gcc.gnu.org/libstdc++/">libstdc++-v3 homepage</a>.
-</p>
+<p><em>
+   To the <a href="http://gcc.gnu.org/libstdc++/">libstdc++-v3 homepage</a>.
+</em></p>
 
 
 <!-- ####################################################### -->
