@@ -19,16 +19,18 @@
 
 <h1 class="centered">libstdc++ Frequently Asked Questions</h1>
 
-<p>The latest version of this document is always available at
+<p class="fineprint"><em>
+   The latest version of this document is always available at
    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/">
    http://gcc.gnu.org/onlinedocs/libstdc++/faq/</a>.  The main documentation
    page is at
    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">
    http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html</a>.
-</p>
+</em></p>
 
-<p>To the <a href="http://gcc.gnu.org/libstdc++/">libstdc++-v3 homepage</a>.
-</p>
+<p><em>
+   To the <a href="http://gcc.gnu.org/libstdc++/">libstdc++-v3 homepage</a>.
+</em></p>
 
 <!-- ####################################################### -->
 <hr />
